updateed cat and dog

--- a/notebooks/cat vs dogs.ipynb
+++ b/notebooks/cat vs dogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "outputs": [],
    "source": [
     "import os\n",
@@ -11,6 +11,7 @@
     "import seaborn as sns\n",
     "import tensorflow as tf\n",
     "\n",
+    "from keras import backend as kb\n",
     "from matplotlib import pyplot as plt\n",
     "from tensorflow.keras.models import Sequential, load_model, Model\n",
     "from tensorflow.keras.applications import VGG16\n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "gpus = tf.config.list_physical_devices('GPU')\n",
@@ -66,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -2098,6 +2099,112 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "outputs": [
+    {
+     "ename": "RuntimeError",
+     "evalue": "tf.gradients is not supported when eager execution is enabled. Use tf.GradientTape instead.",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mRuntimeError\u001B[0m                              Traceback (most recent call last)",
+      "\u001B[1;32m~\\AppData\\Local\\Temp/ipykernel_15248/4021740419.py\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m      8\u001B[0m \u001B[0mlayer_output\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_layer\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlayer_name\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0moutput\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      9\u001B[0m \u001B[0mloss\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mkb\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmean\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mlayer_output\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[1;33m:\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mfilter_index\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 10\u001B[1;33m \u001B[0mgrads\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mkb\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mgradients\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mloss\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mmodel\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0minput\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m[\u001B[0m\u001B[1;36m0\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     11\u001B[0m \u001B[0mgrads\u001B[0m \u001B[1;33m/=\u001B[0m \u001B[1;33m(\u001B[0m\u001B[0mkb\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msqrt\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkb\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmean\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mkb\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0msquare\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mgrads\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m+\u001B[0m \u001B[1;36m1e-5\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     12\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mc:\\program files\\python39\\lib\\site-packages\\keras\\backend.py\u001B[0m in \u001B[0;36mgradients\u001B[1;34m(loss, variables)\u001B[0m\n\u001B[0;32m   4261\u001B[0m       \u001B[0mA\u001B[0m \u001B[0mgradients\u001B[0m \u001B[0mtensor\u001B[0m\u001B[1;33m.\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m   4262\u001B[0m   \"\"\"\n\u001B[1;32m-> 4263\u001B[1;33m   return tf.compat.v1.gradients(\n\u001B[0m\u001B[0;32m   4264\u001B[0m       loss, variables, colocate_gradients_with_ops=True)\n\u001B[0;32m   4265\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mc:\\program files\\python39\\lib\\site-packages\\tensorflow\\python\\ops\\gradients_impl.py\u001B[0m in \u001B[0;36mgradients\u001B[1;34m(ys, xs, grad_ys, name, colocate_gradients_with_ops, gate_gradients, aggregation_method, stop_gradients, unconnected_gradients)\u001B[0m\n\u001B[0;32m    167\u001B[0m   \u001B[1;31m# pylint: disable=protected-access\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    168\u001B[0m   \u001B[1;32mwith\u001B[0m \u001B[0mops\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mget_default_graph\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0m_mutation_lock\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 169\u001B[1;33m     return gradients_util._GradientsHelper(\n\u001B[0m\u001B[0;32m    170\u001B[0m         \u001B[0mys\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mxs\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mgrad_ys\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mname\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcolocate_gradients_with_ops\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    171\u001B[0m         \u001B[0mgate_gradients\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0maggregation_method\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mstop_gradients\u001B[0m\u001B[1;33m,\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32mc:\\program files\\python39\\lib\\site-packages\\tensorflow\\python\\ops\\gradients_util.py\u001B[0m in \u001B[0;36m_GradientsHelper\u001B[1;34m(ys, xs, grad_ys, name, colocate_gradients_with_ops, gate_gradients, aggregation_method, stop_gradients, unconnected_gradients, src_graph)\u001B[0m\n\u001B[0;32m    480\u001B[0m   \u001B[1;34m\"\"\"Implementation of gradients().\"\"\"\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m    481\u001B[0m   \u001B[1;32mif\u001B[0m \u001B[0mcontext\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mexecuting_eagerly\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m--> 482\u001B[1;33m     raise RuntimeError(\"tf.gradients is not supported when eager execution \"\n\u001B[0m\u001B[0;32m    483\u001B[0m                        \"is enabled. Use tf.GradientTape instead.\")\n\u001B[0;32m    484\u001B[0m   \u001B[1;32mif\u001B[0m \u001B[0msrc_graph\u001B[0m \u001B[1;32mis\u001B[0m \u001B[1;32mNone\u001B[0m\u001B[1;33m:\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mRuntimeError\u001B[0m: tf.gradients is not supported when eager execution is enabled. Use tf.GradientTape instead."
+     ]
+    }
+   ],
+   "source": [
+    "model = VGG16(weights='imagenet',\n",
+    "              include_top=False)\n",
+    "\n",
+    "layer_name = 'block3_conv1'\n",
+    "filter_index = 0\n",
+    "step = 1.\n",
+    "\n",
+    "layer_output = model.get_layer(layer_name).output\n",
+    "loss = kb.mean(layer_output[:, :, :, filter_index])\n",
+    "grads = kb.gradients(loss, model.input)[0]\n",
+    "grads /= (kb.sqrt(kb.mean(kb.square(grads))) + 1e-5)\n",
+    "\n",
+    "iterate = kb.function([model.input], [loss, grads])\n",
+    "loss_value, grads_value = iterate([np.zeros((1, 150, 150, 3))])\n",
+    "\n",
+    "# starts from a gray image with some noise\n",
+    "input_img_data = np.random.random((1, 150, 150, 3)) * 20 + 128\n",
+    "\n",
+    "for i in range(40):\n",
+    "    # computes the loss value and gradient value\n",
+    "    loss_value, grads_value = iterate([input_img_data])\n",
+    "    # runs gradient ascent for 40 steps\n",
+    "    # adjusts the input image in the direction that maximizes the loss\n",
+    "    input_img_data += grads_value * step\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [],
+   "source": [
+    "def deprocess_image(x):\n",
+    "    x -= x.mean()\n",
+    "    x /= (x.std() + 1e-5)\n",
+    "    x *= 0.1\n",
+    "\n",
+    "    x += 0.5\n",
+    "    x = np.clip(x, 0, 255).astype('uint8')\n",
+    "    return x\n",
+    "\n",
+    "\n",
+    "def generate_pattern(layer_name, filter_index, size=150):\n",
+    "    layer_output = model.get_layer(layer_name).output\n",
+    "    loss = kb.mean(layer_output[:, :, :, filter_index])\n",
+    "    grads = kb.gradients(loss, model.input)[0]\n",
+    "    grads /= (kb.sqrt(kb.mean(kb.square(grads))) + 1e-5)\n",
+    "    iterate = kb.function([model.input], [loss, grads])\n",
+    "    input_img_data = np.random.random((1, size, size, 3)) * 20 + 128.\n",
+    "    step = 1.\n",
+    "\n",
+    "    for i in range(40):\n",
+    "        loss_value, grads_value = iterate([input_img_data])\n",
+    "        input_img_data += grads_value * step\n",
+    "\n",
+    "    img = input_img_data[0]\n",
+    "    return deprocess_image(img)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "tf.compat.v1.disable_eager_execution()\n",
+    "plt.imshow(generate_pattern('block3_conv1', 0))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   }
